--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,8 @@ h3,
 h4,
 h5,
 p,
+ul,
+ol,
 figure {
   margin: 0;
 }
@@ -29,6 +31,7 @@ body {
   line-height: 1.5;
   min-height: 100vh;
   font-size: 1.3rem;
+  background-color: #f5f5f5;
 }
 
 /* Make form elements easier to work with*/
