--- a/src/components/SideNavigation/style.module.css
+++ b/src/components/SideNavigation/style.module.css
@@ -1,17 +1,15 @@
+
 .aside__wrapper {
+  font-size: 1.2rem;
   background-color: #fefefe;
   color: #0f0f0f;
   width: 20%;
   border-radius: 0.31rem;
-  padding: 3em 0;
-  margin-top: 3em;
+  margin-top: 2em;
+  align-self: flex-start;
 }
 .nav__list {
   list-style-type: none;
+  padding: 1em;
 }
-.nav__item {
-  padding: 1em 0;
-}
-/* .side__nav--item-wrapper{
-  margin-top: 0.25em;
-} */
+
