Add applicant form UI implemented

--- a/public/style.css
+++ b/public/style.css
@@ -69,6 +69,9 @@ UTILITY CLASSES
 .shadow {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
+.margin-top{
+  margin-top: 0.625em;
+}
 
 /* Colors */
 .bg-white {
@@ -95,3 +98,4 @@ UTILITY CLASSES
 .text-small {
   font-size: 1.025rem;
 }
+
